[package]
name = "tokio-echo"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
dashmap = "6.1.0"
either = "1.15.0"
futures = "0.3.31"
num_cpus = "1.17.0"
once_cell = "1.21.3"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
